--- a/_sass/_migrated-main.scss
+++ b/_sass/_migrated-main.scss
@@ -512,16 +512,12 @@ td {
   }
   p,
   h2,
-  .home > header .title > .heading-group p,
-  section.outside-app h1,
-  h3 {
+  .home > header .title > .heading-group p, h3 {
     orphans: 3;
     widows: 3;
   }
   h2,
-  .home > header .title > .heading-group p,
-  section.outside-app h1,
-  h3 {
+  .home > header .title > .heading-group p, h3 {
     page-break-after: avoid;
   }
 }
@@ -1976,16 +1972,12 @@ td {
   }
   p,
   h2,
-  .home > header .title > .heading-group p,
-  section.outside-app h1,
-  h3 {
+  .home > header .title > .heading-group p, h3 {
     orphans: 3;
     widows: 3;
   }
   h2,
-  .home > header .title > .heading-group p,
-  section.outside-app h1,
-  h3 {
+  .home > header .title > .heading-group p, h3 {
     page-break-after: avoid;
   }
 }
@@ -3348,10 +3340,6 @@ footer#footer-edx-v3 .mobile-app-links li,
   .help-tab,
   .course-info .container .wrap-instructor-info .instructor-info-action,
   .course-info
-    section.outside-app
-    .wrap-instructor-info
-    .instructor-info-action,
-  .course-info
     .view-profile
     .profile-self
     .wrapper-profile-field-account-privacy
@@ -3869,7 +3857,6 @@ body {
 h1,
 h2,
 .home > header .title > .heading-group p,
-section.outside-app h1,
 h3,
 h4,
 h5,
@@ -3885,8 +3872,7 @@ h1 {
   text-align: center;
 }
 h2,
-.home > header .title > .heading-group p,
-section.outside-app h1 {
+.home > header .title > .heading-group p {
   color: #646464;
   font: normal 1.2em/1.2em $gym-text-font-stack;
   margin-bottom: 15px;
@@ -4039,18 +4025,12 @@ span.edx {
 .static-container p + h2,
 .static-container .home > header .title > .heading-group p + p,
 .home > header .title > .heading-group .static-container p + p,
-.static-container section.outside-app p + h1,
-section.outside-app .static-container p + h1,
 .static-container ul + h2,
 .static-container .home > header .title > .heading-group ul + p,
 .home > header .title > .heading-group .static-container ul + p,
-.static-container section.outside-app ul + h1,
-section.outside-app .static-container ul + h1,
 .static-container ol + h2,
 .static-container .home > header .title > .heading-group ol + p,
-.home > header .title > .heading-group .static-container ol + p,
-.static-container section.outside-app ol + h1,
-section.outside-app .static-container ol + h1 {
+.home > header .title > .heading-group .static-container ol + p {
   margin-top: 40px;
 }
 .static-container ul + p,
@@ -4429,19 +4409,13 @@ mark {
 .shopping-cart .bordered-bar h2,
 .shopping-cart .bordered-bar .home > header .title > .heading-group p,
 .home > header .title > .heading-group .shopping-cart .bordered-bar p,
-.shopping-cart .bordered-bar section.outside-app h1,
-section.outside-app .shopping-cart .bordered-bar h1,
 .empty-cart h2,
 .empty-cart .home > header .title > .heading-group p,
 .home > header .title > .heading-group .empty-cart p,
-.empty-cart section.outside-app h1,
-section.outside-app .empty-cart h1,
 .enrollment-modal-wrapper.is-shown .enrollment-modal .enrollment-change-title,
 .financial-assistance-wrapper h2,
 .financial-assistance-wrapper .home > header .title > .heading-group p,
 .home > header .title > .heading-group .financial-assistance-wrapper p,
-.financial-assistance-wrapper section.outside-app h1,
-section.outside-app .financial-assistance-wrapper h1,
 .certificate-card .card-title,
 .view-profile
   .profile-self
@@ -4553,8 +4527,6 @@ body.error h1,
 .login-register-content h2,
 .login-register-content .home > header .title > .heading-group p,
 .home > header .title > .heading-group .login-register-content p,
-.login-register-content section.outside-app h1,
-section.outside-app .login-register-content h1,
 .verification-process .reverify-success-step .title,
 .reverify-blocked .title,
 .confirm-enrollment .title,
@@ -4569,8 +4541,6 @@ section.outside-app .login-register-content h1,
 .text-me-fragment h2,
 .text-me-fragment .home > header .title > .heading-group p,
 .home > header .title > .heading-group .text-me-fragment p,
-.text-me-fragment section.outside-app h1,
-section.outside-app .text-me-fragment h1,
 .view-profile .profile-header .header,
 .view-profile
   .wrapper-profile-section-container-one
@@ -4598,24 +4568,16 @@ section.outside-app .text-me-fragment h1,
 .shopping-cart .pattern h2,
 .shopping-cart .pattern .home > header .title > .heading-group p,
 .home > header .title > .heading-group .shopping-cart .pattern p,
-.shopping-cart .pattern section.outside-app h1,
-section.outside-app .shopping-cart .pattern h1,
 .empty-cart h2,
 .empty-cart .home > header .title > .heading-group p,
 .home > header .title > .heading-group .empty-cart p,
-.empty-cart section.outside-app h1,
-section.outside-app .empty-cart h1,
 #api-access-wrapper h2,
 #api-access-wrapper .home > header .title > .heading-group p,
 .home > header .title > .heading-group #api-access-wrapper p,
-#api-access-wrapper section.outside-app h1,
-section.outside-app #api-access-wrapper h1,
 .certificate-card .card-title,
 .dashboard-search-results .search-info h2,
 .dashboard-search-results .search-info .home > header .title > .heading-group p,
 .home > header .title > .heading-group .dashboard-search-results .search-info p,
-.dashboard-search-results .search-info section.outside-app h1,
-section.outside-app .dashboard-search-results .search-info h1,
 .wrapper-msg .msg-content .title,
 .verification-process .carousel .requirements .title,
 .verification-process .carousel .requirements .requirement .title,
@@ -4640,8 +4602,6 @@ section.outside-app .dashboard-search-results .search-info h1,
 .financial-assistance-wrapper h2,
 .financial-assistance-wrapper .home > header .title > .heading-group p,
 .home > header .title > .heading-group .financial-assistance-wrapper p,
-.financial-assistance-wrapper section.outside-app h1,
-section.outside-app .financial-assistance-wrapper h1,
 .text-me-fragment h3,
 .certificate-card .card-supertitle,
 .view-profile .profile-header .subheader,
@@ -4780,8 +4740,6 @@ section.outside-app .financial-assistance-wrapper h1,
 .verification-process h2,
 .verification-process .home > header .title > .heading-group p,
 .home > header .title > .heading-group .verification-process p,
-.verification-process section.outside-app h1,
-section.outside-app .verification-process h1,
 .verification-process h3,
 .verification-process h4,
 .verification-process h5,
@@ -4836,8 +4794,6 @@ body.error h1 {
 .login-register-content h2,
 .login-register-content .home > header .title > .heading-group p,
 .home > header .title > .heading-group .login-register-content p,
-.login-register-content section.outside-app h1,
-section.outside-app .login-register-content h1,
 .verification-process .reverify-success-step .title,
 .reverify-blocked .title,
 .confirm-enrollment .title,
@@ -4852,8 +4808,6 @@ section.outside-app .login-register-content h1,
 .text-me-fragment h2,
 .text-me-fragment .home > header .title > .heading-group p,
 .home > header .title > .heading-group .text-me-fragment p,
-.text-me-fragment section.outside-app h1,
-section.outside-app .text-me-fragment h1,
 .view-profile .profile-header .header,
 .view-profile
   .wrapper-profile-section-container-one
@@ -4884,24 +4838,16 @@ section.outside-app .text-me-fragment h1,
 .shopping-cart .pattern h2,
 .shopping-cart .pattern .home > header .title > .heading-group p,
 .home > header .title > .heading-group .shopping-cart .pattern p,
-.shopping-cart .pattern section.outside-app h1,
-section.outside-app .shopping-cart .pattern h1,
 .empty-cart h2,
 .empty-cart .home > header .title > .heading-group p,
 .home > header .title > .heading-group .empty-cart p,
-.empty-cart section.outside-app h1,
-section.outside-app .empty-cart h1,
 #api-access-wrapper h2,
 #api-access-wrapper .home > header .title > .heading-group p,
 .home > header .title > .heading-group #api-access-wrapper p,
-#api-access-wrapper section.outside-app h1,
-section.outside-app #api-access-wrapper h1,
 .certificate-card .card-title,
 .dashboard-search-results .search-info h2,
 .dashboard-search-results .search-info .home > header .title > .heading-group p,
 .home > header .title > .heading-group .dashboard-search-results .search-info p,
-.dashboard-search-results .search-info section.outside-app h1,
-section.outside-app .dashboard-search-results .search-info h1,
 .wrapper-msg .msg-content .title {
   font-size: 18px;
   line-height: 26.64px;
@@ -4929,8 +4875,6 @@ section.outside-app .dashboard-search-results .search-info h1,
 .financial-assistance-wrapper h2,
 .financial-assistance-wrapper .home > header .title > .heading-group p,
 .home > header .title > .heading-group .financial-assistance-wrapper p,
-.financial-assistance-wrapper section.outside-app h1,
-section.outside-app .financial-assistance-wrapper h1,
 .text-me-fragment h3,
 .certificate-card .card-supertitle,
 .view-profile .profile-header .subheader,
@@ -5281,8 +5225,6 @@ body.error .description,
   p
   span
   .blue-link,
-.shopping-cart .bordered-bar section.outside-app h1 span .blue-link,
-section.outside-app .shopping-cart .bordered-bar h1 span .blue-link,
 .shopping-cart table.course-receipt tr td:last-child span,
 .empty-cart p,
 .enrollment-modal-wrapper.is-shown .enrollment-modal .enrollment-change-field p,
@@ -5330,7 +5272,6 @@ section.outside-app .shopping-cart .bordered-bar h1 span .blue-link,
 .passwordreset .instructions .note,
 #forgot-password-modal #password-reset .instructions .note,
 .course-info .container .wrap-instructor-info .instructor-info-action,
-.course-info section.outside-app .wrap-instructor-info .instructor-info-action,
 .course-info
   .view-profile
   .profile-self
@@ -5595,8 +5536,6 @@ body.error .description {
   p
   span
   .blue-link,
-.shopping-cart .bordered-bar section.outside-app h1 span .blue-link,
-section.outside-app .shopping-cart .bordered-bar h1 span .blue-link,
 .shopping-cart table.course-receipt tr td:last-child span,
 .empty-cart p,
 .enrollment-modal-wrapper.is-shown .enrollment-modal .enrollment-change-field p,
@@ -5647,7 +5586,6 @@ section.outside-app .shopping-cart .bordered-bar h1 span .blue-link,
 .passwordreset .instructions .note,
 #forgot-password-modal #password-reset .instructions .note,
 .course-info .container .wrap-instructor-info .instructor-info-action,
-.course-info section.outside-app .wrap-instructor-info .instructor-info-action,
 .course-info
   .view-profile
   .profile-self
@@ -6797,23 +6735,7 @@ button.disabled,
   > header
   .title
   > .heading-group
-  p,
-.modal .inner-wrapper header section.outside-app h1,
-section.outside-app .modal .inner-wrapper header h1,
-.leanModal_box .inner-wrapper header section.outside-app h1,
-section.outside-app .leanModal_box .inner-wrapper header h1,
-.entitlement-unenrollment-modal .inner-wrapper header section.outside-app h1,
-section.outside-app .entitlement-unenrollment-modal .inner-wrapper header h1,
-.entitlement-unenrollment-modal
-  .entitlement-unenrollment-modal-inner-wrapper
-  header
-  section.outside-app
-  h1,
-section.outside-app
-  .entitlement-unenrollment-modal
-  .entitlement-unenrollment-modal-inner-wrapper
-  header
-  h1 {
+  p {
   position: relative;
   text-align: center;
   text-shadow: 0 1px rgba(255, 255, 255, 0.4);
@@ -7454,7 +7376,6 @@ section.outside-app
   margin-top: 5px;
 }
 .container.activation,
-section.activation.outside-app,
 .view-profile
   .profile-self
   .wrapper-profile-field-account-privacy
@@ -21359,6 +21280,7 @@ section.outside-app div.info-wrapper p,
 section.updates {
   border-right: 1px dashed #ccc;
   line-height: 1.41575em;
+  font-size: 1.6rem;
 
   h1 {
     font-size: 36px;
@@ -21474,8 +21396,6 @@ section.handouts {
 .course h2,
 .course .home > header .title > .heading-group p,
 .home > header .title > .heading-group .course p,
-.course section.outside-app h1,
-section.outside-app .course h1,
 .course h3,
 .course h4,
 .course h5,
@@ -21541,9 +21461,7 @@ section.outside-app .course h1,
 }
 .final-exam-status h2,
 .final-exam-status .home > header .title > .heading-group p,
-.home > header .title > .heading-group .final-exam-status p,
-.final-exam-status section.outside-app h1,
-section.outside-app .final-exam-status h1 {
+.home > header .title > .heading-group .final-exam-status p {
   font: 900 1.8em/1.1 $gym-font-stack;
   text-transform: uppercase;
   letter-spacing: 0.03em;
@@ -21552,9 +21470,7 @@ section.outside-app .final-exam-status h1 {
 }
 .final-exam-status h2 + p,
 .final-exam-status .home > header .title > .heading-group p + p,
-.home > header .title > .heading-group .final-exam-status p + p,
-.final-exam-status section.outside-app h1 + p,
-section.outside-app .final-exam-status h1 + p {
+.home > header .title > .heading-group .final-exam-status p + p {
   font-size: 1.6em;
   margin-top: 0.5em;
 }
@@ -21591,9 +21507,7 @@ section.outside-app .final-exam-status h1 + p {
 }
 .course-about h2,
 .course-about .home > header .title > .heading-group p,
-.home > header .title > .heading-group .course-about p,
-.course-about section.outside-app h1,
-section.outside-app .course-about h1 {
+.home > header .title > .heading-group .course-about p {
   font: 900 1.2em/1.3 $gym-font-stack;
   color: #222;
   letter-spacing: 0.06em;
@@ -21627,13 +21541,10 @@ section.outside-app .course-about h1 {
 }
 .course-about-sidebar h2,
 .course-about-sidebar .home > header .title > .heading-group p,
-.home > header .title > .heading-group .course-about-sidebar p,
-.course-about-sidebar section.outside-app h1,
-section.outside-app .course-about-sidebar h1 {
+.home > header .title > .heading-group .course-about-sidebar p {
   margin-top: 0;
 }
 .container .discussion-body .blank-slate .label,
-section.outside-app .discussion-body .blank-slate .label,
 .view-profile
   .profile-self
   .wrapper-profile-field-account-privacy
@@ -21662,7 +21573,6 @@ html body.discussion .discussion-user-threads .wmd-prompt-dialog {
   display: inline;
 }
 section.container.dashboard,
-section.dashboard.outside-app,
 .view-profile
   .profile-self
   .wrapper-profile-field-account-privacy
@@ -21758,9 +21668,7 @@ section.dashboard.outside-app,
   > .heading-group
   #dashboard-main.course-content
   .profile-sidebar
-  p,
-#dashboard-main.course-content .profile-sidebar section.outside-app h1,
-section.outside-app #dashboard-main.course-content .profile-sidebar h1 {
+  p {
   font: 900 1em/1.3 $gym-font-stack;
   color: #222;
   letter-spacing: 0.06em;
@@ -21825,8 +21733,6 @@ section.outside-app #dashboard-main.course-content .profile-sidebar h1 {
 #dashboard-main.course-content h2,
 #dashboard-main.course-content .home > header .title > .heading-group p,
 .home > header .title > .heading-group #dashboard-main.course-content p,
-#dashboard-main.course-content section.outside-app h1,
-section.outside-app #dashboard-main.course-content h1,
 #dashboard-main.course-content h3,
 #dashboard-main.course-content h4,
 #dashboard-main.course-content h5,
@@ -21855,12 +21761,6 @@ body * .leanModal_box .home > header .title > .heading-group p,
 .home > header .title > .heading-group body * .leanModal_box p,
 body * .entitlement-unenrollment-modal .home > header .title > .heading-group p,
 .home > header .title > .heading-group body * .entitlement-unenrollment-modal p,
-body * .modal section.outside-app h1,
-section.outside-app body * .modal h1,
-body * .leanModal_box section.outside-app h1,
-section.outside-app body * .leanModal_box h1,
-body * .entitlement-unenrollment-modal section.outside-app h1,
-section.outside-app body * .entitlement-unenrollment-modal h1,
 body * .modal h3,
 body * .leanModal_box h3,
 body * .entitlement-unenrollment-modal h3,
@@ -22009,8 +21909,6 @@ body * .entitlement-unenrollment-modal textarea {
 .subsection h2,
 .subsection .home > header .title > .heading-group p,
 .home > header .title > .heading-group .subsection p,
-.subsection section.outside-app h1,
-section.outside-app .subsection h1,
 .subsection h3,
 .subsection h4,
 .subsection h5,
@@ -22056,9 +21954,7 @@ section.outside-app .subsection h1,
 }
 .home > header .header-title h2,
 .home > header .header-title .title > .heading-group p,
-.home > header .title > .heading-group .header-title p,
-.home > header .header-title section.outside-app h1,
-section.outside-app .home > header .header-title h1 {
+.home > header .title > .heading-group .header-title p {
   color: #ebebeb;
   margin: 0;
   padding: 0;
@@ -22094,7 +21990,6 @@ section.outside-app .home > header .header-title h1 {
   line-height: 1.4em;
 }
 .home .container#get-work article h1,
-.home section#get-work.outside-app article h1,
 .home
   .view-profile
   .profile-self
@@ -22118,7 +22013,6 @@ section.outside-app .home > header .header-title h1 {
   text-transform: none;
 }
 .home .container#get-work hr,
-.home section#get-work.outside-app hr,
 .home
   .view-profile
   .profile-self
@@ -22175,7 +22069,6 @@ section.outside-app .home > header .header-title h1 {
 }
 
 .home .container header,
-.home section.outside-app header,
 .home
   .view-profile
   .profile-self
@@ -22196,7 +22089,6 @@ section.outside-app .home > header .header-title h1 {
   display: block;
 }
 .home .container .header-tab,
-.home section.outside-app .header-tab,
 .home
   .view-profile
   .profile-self
@@ -22216,7 +22108,6 @@ section.outside-app .home > header .header-title h1 {
   text-align: center;
 }
 .home .container .header-tab h1:before,
-.home section.outside-app .header-tab h1:before,
 .home
   .view-profile
   .profile-self
@@ -22252,7 +22143,6 @@ section.outside-app .home > header .header-title h1 {
   z-index: 100;
 }
 .home .container .header-tab h1,
-.home section.outside-app .header-tab h1,
 .home
   .view-profile
   .profile-self
@@ -22290,9 +22180,7 @@ section.outside-app .home > header .header-title h1 {
 }
 .home .container-fluid h2,
 .home > header .container-fluid .title > .heading-group p,
-.home > header .title > .heading-group .container-fluid p,
-.home .container-fluid section.outside-app h1,
-section.outside-app .home .container-fluid h1 {
+.home > header .title > .heading-group .container-fluid p {
   font-size: 24px;
   text-transform: none;
   font-weight: bold;
@@ -22425,7 +22313,6 @@ body .system-status-container {
   color: black;
 }
 body .system-status-container > .container > .row > .col-md-12,
-body .system-status-container > section.outside-app > .row > .col-md-12,
 body
   .view-profile
   .profile-self
