--- a/_layouts/take5-raw.html
+++ b/_layouts/take5-raw.html
@@ -32,6 +32,7 @@
                 <div class="col-md-8">
                   <div class="take5--details" id="tutorial-details">
                     <header>
+                      <p class="subhead-topic all-caps">{{ course.topic }}</p>
                       <h1 class="title all-caps">{{ course.title }}</h1>
 
                       {% if course.instructor !=null %}
