--- a/_includes/take5/recommended-content.html
+++ b/_includes/take5/recommended-content.html
@@ -100,7 +100,7 @@ Placeholder logic for limited design-related recommended content
                 </a>
               </div>
               <header>
-                <h4 class="subhead-topic">{{ tutorial1.topic }}</h4>
+                <p class="subhead-topic all-caps" role="doc-subtitle">{{ tutorial1.topic }}</p>
                 <h3 class="all-caps">
                   <a href="{{ tutorial1.title | slugify | prepend: base_path  }}">{{ tutorial1.title }}</a>
                 </h3>
@@ -115,7 +115,7 @@ Placeholder logic for limited design-related recommended content
                 </a>
               </div>
               <header>
-                <h4 class="subhead-topic">{{ tutorial2.topic }}</h4>
+                <p class="subhead-topic all-caps" role="doc-subtitle">{{ tutorial2.topic }}</p>
                 <h3 class="all-caps">
                   <a href="{{ tutorial2.title | slugify | prepend: base_path  }}">{{ tutorial2.title }}</a>
                 </h3>
@@ -130,7 +130,7 @@ Placeholder logic for limited design-related recommended content
                 </a>
               </div>
               <header>
-                <h4 class="subhead-topic">{{ tutorial3.topic }}</h4>
+                <p class="subhead-topic all-caps" role="doc-subtitle">{{ tutorial3.topic }}</p>
                 <h3 class="all-caps">
                   <a href="{{ tutorial3.title | slugify | prepend: base_path  }}">{{ tutorial3.title }}</a>
                 </h3>
